# Stacks-Spider-Solitaire

./: .gitignore  .gitmodules  README.md
Stack-Spider-Solitaire/: .clang-format  CMakeLists.txt  Stack-Spider-Solitaire.sln  Stack-Spider-Solitaire.vcxproj  Stack-Spider-Solitaire.vcxproj.filters  format-all.sh
Stack-Spider-Solitaire/header/: AnimatedImageView.h  ButtonView.h  IUIController.h  ImageView.h  MainMenuUIController.h  TextView.h
Stack-Spider-Solitaire/header/Card/: CardConfig.h  CardController.h  CardModel.h  CardService.h  CardTexture.h  CardView.h
Stack-Spider-Solitaire/header/Event/: EventService.h
Stack-Spider-Solitaire/header/Gameplay/: GameplayService.h  GameplayUIController.h  LevelController.h  LevelModel.h  LevelView.h
Stack-Spider-Solitaire/header/Global/: Config.h  ServiceLocator.h  TimeService.h
Stack-Spider-Solitaire/header/Graphics/: GraphicService.h
Stack-Spider-Solitaire/header/Main/: GameService.h  GraphicService.h
Stack-Spider-Solitaire/header/Sound/: SoundService.h
Stack-Spider-Solitaire/header/Stack/: ArrayStack.h  IStack.h  LinkedListStack.h
Stack-Spider-Solitaire/header/UI/: UIService.h
Stack-Spider-Solitaire/include/Card/: CardConfig.h  CardController.h  CardModel.h  CardService.h  CardTexture.h
Stack-Spider-Solitaire/include/Gameplay/: GameplayService.h  LevelController.h  LevelView.h
Stack-Spider-Solitaire/include/Global/: Config.h  TimeService.h
Stack-Spider-Solitaire/include/Main/: GameService.h
Stack-Spider-Solitaire/source/: ButtonView.cpp  Config.cpp  ImageView.cpp  MainMenuUIController.cpp  SoundService.cpp  SplashScreenUIController.cpp  TextView.cpp  UIView.cpp
Stack-Spider-Solitaire/source/Card/: CardController.cpp  CardModel.cpp  CardService.cpp  CardView.cpp
Stack-Spider-Solitaire/source/Event/: EventService.cpp
Stack-Spider-Solitaire/source/Gameplay/: GameplayService.cpp  GameplayUIController.cpp  (+3 more)
(+38 files in other folders)
